# rust-claw-oc

./: .claw_prompt.md  .gitignore  .rusty_claw_memory.db  AGENTS.md  AUTOPILOT_IMPLEMENTATION_PLAN.md  CLAUDE.md  CONTEXT_AUDIT_REPORT.md  CONTEXT_MANAGEMENT_DESIGN.md  CONTEXT_MANAGEMENT_IMPLEMENTATION_PLAN.md  Cargo.toml  DESIGN_ALIYUN.md  DESIGN_BROWSER_TOOL.md  FINAL_AUDIT_REPORT.md  GEMINI_TIMEOUT_INVESTIGATION_REPORT.md  MEMORY.md  OpenClaw-Context-And-Memory-Analysis.md  README.md  RUST_LSP_INTEGRATION_FEASIBILITY.md  STABILITY_AND_TIMEOUT_FIX_REPORT.md  config.toml  debug_context.json  fetch_indices.py  fetch_stocks.py  fetch_stocks_today.py  fix_core.patch  fix_system_prompt.patch  implementation_todo.md  newsletter_anthropic_deep_dive.md  newsletter_mimo_v2_pro.md  optimization_plan.md  patch_tool.rs  performance_analysis.md  run_refactor.sh  run_test.sh  run_test2.sh  rusty-claw-design.md  test_llm_response.sh  video_info.json  zhihu_answer.html  zhihu_content.html
.sisyphus/: boulder.json
context-profiler/: README.md  claw_audit.py  pyproject.toml  requirements.txt  run_profiler.py
context-profiler/docs/: DESIGN.md  RESEARCH.md
context-profiler/src/context_profiler/: engine.py  main.py  models.py
context-profiler/src/context_profiler/rules/: base.py  causal_chain.py  grep_bloat.py  system_bloat.py
context-profiler/tests/: test_grep_rule.py
docs/: ASYNC_SUBAGENT_IMPLEMENTATION_PLAN.md  BROWSER_SNAPSHOT_REDESIGN.md  CODE_MODE_BACKGROUND_EXECUTION_PLAN.md  CODE_MODE_DESIGN.md  CODE_MODE_IMPLEMENTATION_STATUS.md  CODE_MODE_UNIFIED_TOOL_EXECUTION_DESIGN.md  CONTEXT_MANAGEMENT_DESIGN.md  DESIGN_ALIYUN.md  LARGE_REQUEST_STRATEGY.md  REFACTOR_PLAN.md  SKILL_RUNTIME_SIMPLIFICATION_DESIGN.md  STATE_MACHINE_REDESIGN.md  SUBAGENT_OBSERVABILITY_EXECUTION_PLAN.md  SUBAGENT_TOOL_CONSOLIDATION.md  TRACE_CENTER_DAILY_USE_DESIGN.md  complex_skill_engine_design.md  context-assembly-analysis.md  integration_test_design.md  nested_skill_call_tree_design.md  rusty-claw-design.md  sandbox_design.md  subagent_skills_review.md
logs/: rusty-claw.log.2026-02-27
observability_tools/: analyze_event_log.py
rusty_claw/: sessions.json
scripts/: analyze_events.sh  restart-rusty-claw
skills/: generate_image.md  generate_tts_audio.md  git-status.md  jina-reader.md  summarize_info.md  system_audit.md  understand_image.md
src/: acp.rs  artifact_store.rs  browser.rs  call_chain.rs  config.rs  context.rs  context_assembler.rs  core.rs  delegation.rs  discord.rs  event_log.rs  evidence.rs  lib.rs  lsp.rs  (+24 more)
(+128 files in other folders)
