[package]
name = "rusty-claw"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
async-trait = "0.1"
thiserror = "2.0"
schemars = "0.8"
futures = "0.3"
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v4"] }
serde_yaml = "0.9.34"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.25.0"
