[package]
name = "rusty-claw"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
serenity = "0.12"
tokio-util = "0.7.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
async-trait = "0.1"
thiserror = "2.0"
schemars = "0.8"
futures = "0.3"
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v4"] }
serde_yaml = "0.9.34"
regex = "1.12.3"
tiktoken-rs = "0.9.1"
ndarray = "0.17.2"
fastembed = "5.11.0"
portable-pty = "0.9.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5.0"
chromiumoxide = "0.9.1"

[dev-dependencies]
tempfile = "3.25.0"
