[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "context-profiler"
version = "0.1.0"
description = "Production-grade context analysis and optimization tool for LLM Agents."
authors = ["liuli0212 <luly81@gmail.com>"]
readme = "README.md"
repository = "https://github.com/liuli0212/context-profiler"
packages = [{include = "context_profiler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
rich = "^13.0"
typer = "^0.9.0"
pyyaml = "^6.0"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
mypy = "^1.0"
types-pyyaml = "^6.0"

[tool.poetry.scripts]
ctx-profile = "context_profiler.main:app"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
